hphp/test/slow/late-init-soft/redeclare4.php.expectf
Fatal error: Property B::$x must be <<__SoftLateInit>> (as in class A) in %s/redeclare4.php on line 8
